<resources>
    <!-- Общие строки -->
    <string name="app_name">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="library_button">Медиатека</string>
    <string name="settings_button">Настройки</string>

    <!-- Новые строки для экрана "Настройки" -->
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>


    <!-- Ссылка и текст для шаринга -->
    <string name="course_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_message">Посмотри курс по Android-разработке в Практикуме: %s</string>

    <string name="support_email">nukuta2228@yandex.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="offer_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="email_app_not_found">Установите почтовое приложение</string>
    <string name="browser_not_found">Браузер не найден</string>

    <string name="track_cover_description">Обложка трека %1$s исполнителя %2$s</string>
    <string name="track_cover">Обложка трека</string>

    <string name="agreement_icon_desc">Agreement icon</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\n подключение к интернету </string>

    <string name="loading">Идет поиск...</string>
    <string name="retry">Обновить</string>

    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

</resources>