<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    android:orientation="vertical">

    <!-- Заголовок -->
    <TextView
        style="@style/TextAppearance.PlaylistMaker.Header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height_new"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:paddingStart="@dimen/padding_horizontal"
        android:text="@string/app_name" />

    <!-- Контейнер для кнопок -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_vertical_large"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_horizontal"
        android:paddingBottom="@dimen/padding_vertical_extra_large">

        <!-- Кнопка Поиск -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchButton"
            style="@style/Widget.PlaylistMaker.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/padding_vertical_small"
            android:layout_weight="1"
            android:minWidth="@dimen/search_button_text_width"
            android:text="@string/search_button"
            app:icon="@drawable/ic_search" />

        <!-- Кнопка Медиатека -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/libraryButton"
            style="@style/Widget.PlaylistMaker.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/padding_vertical_small"
            android:layout_weight="1"
            android:minWidth="@dimen/library_button_text_width"
            android:text="@string/library_button"
            app:icon="@drawable/ic_library" />

        <!-- Кнопка Настройки -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsButton"
            style="@style/Widget.PlaylistMaker.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minWidth="@dimen/settings_button_text_width"
            android:text="@string/settings_button"
            app:icon="@drawable/ic_settings" />
    </LinearLayout>
</LinearLayout>