<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_horizontal"
    android:paddingEnd="@dimen/padding_horizontal">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/settings_title"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold"
        android:textColor="@color/text_black"
        android:fontFamily="sans-serif"
        android:drawableStart="@drawable/ic_sback"
        android:drawablePadding="@dimen/icon_padding"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/settings_margin_bottom"/>

    <!-- Темная тема -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:layout_marginBottom="@dimen/settings_margin_bottom"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/settings_padding_end">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textColor="@color/text_black"
            android:textSize="@dimen/settings_text_size"
            android:paddingStart="0dp"/>


        <Switch
            android:id="@+id/switchDarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="12dp"/>
    </LinearLayout>

    <!-- Поделиться приложением -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:layout_marginBottom="@dimen/settings_margin_bottom"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/settings_padding_end">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_app"
            android:textColor="@color/text_black"
            android:textSize="@dimen/settings_text_size"
            android:paddingStart="0dp"/>

        <ImageView
            android:layout_width="@dimen/settings_icon_size"
            android:layout_height="@dimen/settings_icon_size"
            android:src="@drawable/ic_share"
            tools:ignore="ContentDescription"/>
    </LinearLayout>

    <!-- Написать в поддержку -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:layout_marginBottom="@dimen/settings_margin_bottom"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/settings_padding_end">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support"
            android:textColor="@color/text_black"
            android:textSize="@dimen/settings_text_size"
            android:paddingStart="0dp"/>

        <ImageView
            android:layout_width="@dimen/settings_icon_size"
            android:layout_height="@dimen/settings_icon_size"
            android:src="@drawable/ic_write"
            tools:ignore="ContentDescription"/>
    </LinearLayout>

    <!-- Пользовательское соглашение -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/settings_padding_end">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="@color/text_black"
            android:textSize="@dimen/settings_text_size"
            android:paddingStart="0dp"/>

        <ImageView
            android:layout_width="@dimen/settings_icon_size"
            android:layout_height="@dimen/settings_icon_size"
            android:src="@drawable/ic_agreement"
            tools:ignore="ContentDescription"/>
    </LinearLayout>
</LinearLayout>